<resources>
    <string name="app_name">МСК Теннис</string>
        <string name="srvApi_url">https://2-dot-sportconnector-981.appspot.com/_ah/api/</string>
        <string name="frame_msg_title">Мои сообщения</string>
        <string name="frame_photo_title">Мои фотографии</string>
        <string name="frame_friends_title">Мои друзья</string>
        <string name="drawer_bottom_logout">Выход</string>
        <string name="login_login">E-mail:</string>
        <string name="login_pass">Пароль:</string>
        <string name="login_checkBox_txt">Автоматический вход</string>
        <string name="login_btn_txt_login">Войти</string>
        <string name="login_btn_txt_registration">Зарегистрироваться</string>
        <string name="login_btn_txt_forgotPass">Забыли пароль?</string>
        <string name="login_err_title">Внимание</string>
        <string name="login_defaultPass">*******</string>
        <string name="login_err_hint">Login must be not less then 6 symbols</string>
        <string name="login_pass_err_hint">Login must be not less then 8 symbols</string>
        <string name="login_err_authorized">Вы вели неверный логин или пароль</string>
        <string name="resetPass_fragmentTitle">Сброс пароля</string>
        <string name="resetPass_login">E-mail:</string>
        <string name="resetPass_btnOk_txt">Продолжить</string>
        <string name="resetPass_btnCancel_txt">Отмена</string>
        <string name="resetPass_err_title">Внимание</string>
        <string name="resetPass_err_loginNotExists">Пользователя с таким email не существует</string>
        <string name="resetPass_msgReqResetPass">Вам на почту %s отправлено письмо. В нем описаны инструкции для установки нового пароля.</string>
        <string name="registration_fragmentTitle">Регистрация</string>
        <string name="registration_login">E-mail:</string>
        <string name="registration_name">Имя:</string>
        <string name="registration_pass">Пароль:</string>
        <string name="registration_btnOk_txt">Продолжить</string>
        <string name="registration_btnCancel_txt">Отмена</string>
        <string name="registration_err_title">Внимание</string>
        <string name="registration_err_loginExists">Пользователь с таким email уже существует</string>
        <string name="registration_err_idNull">Введите ваш E-mail</string>
        <string name="registration_err_nameNull">Введите ваше имя</string>
        <string name="registration_err_pass_empty">Введите пароль</string>
        <string name="registration_err_pass_tooShort">Мин. длина пароля %d символов</string>
        <string name="registration_msgCreateAccount">Вам на почту %s отправлено письмо. В нем описаны инструкции для завершения регистрации.</string>
        <string name="spam_warning_msg">Внимание! Если письмо попало в спам, добавьте отправителя в список доверенных адресов.</string>
        <string name="mainSearch_fragmentTitle">Корты</string>
        <string name="btn_main_1">СПАРРИНГ ПАРТНЕРЫ</string>
        <string name="btn_main_2">ТРЕНЕРЫ</string>
        <string name="btn_main_3">КОРТЫ</string>
        <string name="gmap_fragmentTitle">Поиск кортов</string>
        <string name="gmap_desc_coach">тренер</string>
        <string name="gmap_desc_partner">спаринг партнер</string>
        <string name="gmap_desc_favourite">мой спот</string>
        <string name="gmap_dialog_needUpdate_msg">Обновите приложение Сервисы Google Play.</string>
        <string name="gmap_dialog_needUpdate_btn">Обновить</string>
        <string name="gmap_dialog_needInstall_msg">Установите приложение Сервисы Google Play.</string>
        <string name="gmap_dialog_needInstall_btn">Установить</string>
        <string name="personprofile_myProfile_fragmentTitle">Моя страница</string>
        <string name="personprofile_profile_fragmentTitle">Старница пользователя</string>
        <string name="personprofile_type_coach">тренер</string>
        <string name="personprofile_type_partner">спарринг-партнер</string>
        <string name="personprofile_rating">Уровень игры</string>
        <string name="personprofile_age1">год</string>
        <string name="personprofile_age2">года</string>
        <string name="personprofile_age3">лет</string>
        <string name="personprofile_email">Email:</string>
        <string name="personprofile_phone">Phone:</string>
        <string name="personprofile_type">Category:</string>
        <string name="personprofile_contactsTitle">КОНТАКТЫ</string>
        <string name="personprofile_descTitle">О СЕБЕ</string>
        <string name="personprofile_favoriteSpotsTitle">ЛЮБИМЫЕ КОРТЫ</string>
        <string name="personprofile_reqError">Ошибка</string>
                <string name="spot_item_rating">Рейтинг </string>
                <string name="menu_edit_profile">Редактировать мои данные</string>
        <string name="personprofile_intentChooserTitle">Выполнить в...</string>
        <string name="personprofile_chooserItemSmsMark"></string>
        <string name="editprofile_fragmentTitle">Редактирование</string>
        <string name="editprofile_chagePhoto">Изменить фото</string>
        <string name="editprofile_rotatePhoto">Повернуть фото</string>
        <string name="editprofile_title_general">ОБЩАЯ ИНФОРМАЦИЯ</string>
        <string name="editprofile_hint_name">Имя</string>
        <string name="editprofile_hint_surname">Фамилия</string>
        <string name="editprofile_hint_bithday">Дата рождения</string>
        <string name="editprofile_radio_male">Мужской</string>
        <string name="editprofile_radio_female">Женский</string>
        <string name="editprofile_title_security">БЕЗОПАСНОСТЬ</string>
        <string name="editprofile_txt_changePass">Сменить пароль</string>
        <string name="editprofile_title_contacts">КОНТАКТЫ</string>
        <string name="editprofile_hint_email">Электронная почта</string>
        <string name="editprofile_hint_phone">Телефон</string>
        <string name="editprofile_title_other">ДОПОЛНИТЕЛЬНАЯ ИНФОРМАЦИЯ</string>
        <string name="editprofile_txt_setRating">Уровень игры</string>
        <string name="editprofile_hint_desc">Немного о себе</string>
        <string name="editprofile_saveError">Ошибка</string>
        <string name="editprofile_pickImageError">Выберите другое изображение</string>
        <string name="editprofile_invalidPhone">Введите корректный номер телефона</string>
        <string name="editprofile_invalidSex">Укажите ваш пол</string>
        <string name="editprofile_chooserItemPhotoMark"></string>
                <string name="menu_save_profile">Сохранить</string>
                <string name="changePass_dialogTitle">Смена пароля</string>
                <string name="changePass_old_hint">Старый пароль</string>
                <string name="changePass_new_hint">Новый пароль</string>
                <string name="changePass_new2_hint">Подтвердите новый пароль</string>
                <string name="changePass_btnOk">Продолжить</string>
                <string name="changePass_btnCancel">Отмена</string>
                <string name="changePass_errOld">Вы ввели неверный старый пароль</string>
                <string name="changePass_errNewOld_match">Старый и новый пароли совпадают</string>
                <string name="changePass_errNew_empty">Введите новый пароль</string>
                <string name="changePass_errNew_notMatch">Новые пароли не совпадают</string>
                <string name="changePass_errNew_tooShort">Мин. длина %d символов</string>
                <string name="changePass_msgChangePass">Ваш пароль изменен.</string>
                <string name="changeEmail_dialogTitle">Смена Email</string>
                <string name="changeEmail_old_hint">Старый Email</string>
                <string name="changeEmail_new_hint">Новый Email</string>
                <string name="changeEmail_errNew_invalid">Введите корректный Email</string>
                <string name="changeEmail_errOldNew_matches">Новый Email должен отличаться</string>
                <string name="changeEmail_btnOk">Продолжить</string>
                <string name="changeEmail_btnCancel">Отмена</string>
                <string name="changeEmail_msgChangeEmail">Вам на почту %s отправлено письмо. В нем описаны инструкции для подтверждения почты.</string>
                <string name="changeEmail_err_oldEmailErr">Введите пароль</string>
        <string name="ratingInfo_title">Рейтинг</string>
        <string name="ratingInfo_ratingValLst">1.0,1.5,2.0,2.5,3.0,3.5,4.0,4.5,5.0,5.5,6.0,6.5,7.0</string>
        <string name="ratingInfo_1_0">Теннисист делает первые шаги.</string>
        <string name="ratingInfo_1_5">Игрок обладает небольшим опытом, совершенствует стабильность ударов в игре.</string>
        <string name="ratingInfo_2_0">У игрока заметны недостатки при выполнении основных ударов. Имеет укороченный замах, не может выбирать направление удара. Часто теннисист такого уровня практически не применяет бэкхенд, неправильно держит в руке ракетку. Как правило, у сетки играет крайне неохотно.</string>
        <string name="ratingInfo_2_5">Игрок пытается предвидеть направление удара, но чувство корта еще развито плохо. Кроме того, имеются некоторые проблемы с хватом ракетки, подходом к мячу, предпочитает забегать под форхенд. По-прежнему испытывает трудности при игре у сетки. Может поддерживать игру в низком темпе с партнерами своего уровня.</string>
        <string name="ratingInfo_3_0">Теннисист уже хорошо отбивает средние по темпу мячи, но не всегда может контролировать силу, направление и глубину своих ударов. Лучше всего удаются удары слева. Пытается усиливать подачу, что приводит к ошибкам при ее выполнении. Вторая подача, как правило, значительно слабее первой. У сетки испытывает трудности с низкими обводящими ударами. Умеет неплохо исполнять простые и средней сложности свечи.</string>
        <string name="ratingInfo_3_5">Теннисист может контролировать направление ударов средней сложности, хотя ему немного недостает контроля глубины и разнообразия, улучшается видение и чувство корта. Игрок умеет выполнять несильные направленные удары слева, но мощные удары и высокие отскоки еще требуют доработки. При подаче наблюдается достаточная сила и контроль. Играет более активно у сетки, достает некоторые обводящие удары. Стабильно выполняет смэш на легких мячах.</string>
        <string name="ratingInfo_4_0">Игрок может выполнять разнообразные удары, умеет контролировать глубину и направление удара, как справа, так и слева. Имеет в своем арсенале свечу, смэш, удары с лета и мощные выбивающие удары. Первую подачу выполняет сильно, иногда в ущерб точности. Имеет опыт использования командной тактики при игре в паре.</string>
        <string name="ratingInfo_4_5">Очень разнообразные удары по мячу, эффективно использует силу и вращение мяча. Мощно атакует слева, при этом ошибается только под прессингом. Игрок грамотно использует силу и подкрутку при ударах, умеет управлять темпом игры, хорошо работает ногами, контролирует глубину своих ударов и способен менять тактику в игре в зависимости от соперника. Теннисист обладает сильной и точной первой подачей, стабильно выполняет вторую, способен атаковать возле сетки.</string>
        <string name="testQuestion_title">Серия утверждений по « Форхэнд» (удар справа у правши или слева у левши</string>
        <string name="testQuestion_msg">У Вас заметны недостатки при выполнении основных ударов. Имеете укороченный замах,не можете выбирать направление удара</string>
        <string name="testQuestion_radioBtnVal1">1</string>
        <string name="testQuestion_radioBtnVal2">2</string>
        <string name="testQuestion_radioBtnVal3">3</string>
        <string name="testQuestion_radioBtnVal4">4</string>
        <string name="testQuestion_radioBtnVal5">5</string>
        <string name="testQuestion_radioBtnVal6">6</string>
        <string name="testQuestion_radioBtnVal7">7</string>
        <string name="testQuestion_btnOk">Далее</string>
</resources>