<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:paddingLeft="@dimen/changeEmail_leftRightOffset"
    android:paddingRight="@dimen/changeEmail_leftRightOffset"
    android:paddingBottom="@dimen/changeEmail_bottomOffset"
    android:paddingTop="@dimen/changeEmail_topOffset">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/changeEmail_txtEdt_old"
            android:hint="@string/changeEmail_old_hint"
            android:singleLine="true"
            android:editable="false"
            android:enabled="true"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/changeEmail_txtEdt_new"
            android:hint="@string/changeEmail_new_hint"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:editable="true"
            android:enabled="true" />

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/changeEmail_btn_topOffset">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changeEmail_btnCancel"
            android:id="@+id/changeEmail_btnCancel"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changeEmail_btnOk"
            android:id="@+id/changeEmail_btnOk"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>