<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:paddingLeft="@dimen/changePass_leftRightOffset"
    android:paddingRight="@dimen/changePass_leftRightOffset"
    android:paddingBottom="@dimen/changePass_bottomOffset"
    android:paddingTop="@dimen/changePass_topOffset"
    android:minWidth="@dimen/changePass_Email_dialog_minWidth">

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/textMediumSize"
        android:text="Error"
        android:id="@+id/changePass_txt_error"
        android:textColor="@color/changePass_msgError"
        android:visibility="gone" />-->

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/changePass_txtEdt_old"
            android:textSize="@dimen/textMediumSize"
            android:hint="@string/changePass_old_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:maxLength="@integer/passMaxLength_edtTxt"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/changePass_txtEdt_new"
            android:textSize="@dimen/textMediumSize"
            android:hint="@string/changePass_new_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:maxLength="@integer/passMaxLength_edtTxt"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/changePass_txtEdt_new2"
            android:textSize="@dimen/textMediumSize"
            android:hint="@string/changePass_new2_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:maxLength="@integer/passMaxLength_edtTxt"/>

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/changePass_btn_topOffset">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changePass_btnCancel"
            android:textSize="@dimen/textMediumSize"
            android:id="@+id/changePass_btnCancel"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changePass_btnOk"
            android:textSize="@dimen/textMediumSize"
            android:id="@+id/changePass_btnOk"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>